<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>info.rsdev.mysite</groupId>
    <artifactId>mysite-pom</artifactId>
    <packaging>pom</packaging>
    <version>0.1-SNAPSHOT</version>
    <name>mysite-pom</name>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>3.2.3</version>
        <relativePath />
    </parent>
    <modules>
        <module>webapp</module>
        <module>docs</module>
    </modules>
    <properties>
        <asciidoctorj.version>2.5.11</asciidoctorj.version>
<!--        <guiced.servlets.version>1.2.2.1-jre17</guiced.servlets.version>-->
        <guice-servlet.version>7.0.0</guice-servlet.version>
        <imgscalr.version>4.2</imgscalr.version>
        <opencsv.version>5.9</opencsv.version>
        <stringtemplate.version>4.3.4</stringtemplate.version>
        <undertow.version>2.3.12.Final</undertow.version>
        <tika.version>2.9.1</tika.version>
        <asciidoctor.plugin.version>3.0.0</asciidoctor.plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
    </properties>
    <dependencyManagement>
        <dependencies>
            <!--            <dependency>-->
            <!--                <groupId>com.guicedee.servlets</groupId>-->
            <!--                <artifactId>guiced-servlets</artifactId>-->
            <!--                <version>${guiced.servlets.version}</version>-->
            <!--            </dependency>-->
            <dependency>
                <groupId>com.google.inject.extensions</groupId>
                <artifactId>guice-servlet</artifactId>
                <version>${guice-servlet.version}</version>
            </dependency>
            <dependency>
                <groupId>com.opencsv</groupId>
                <artifactId>opencsv</artifactId>
                <version>${opencsv.version}</version>
            </dependency>
            <dependency>
                <groupId>io.undertow</groupId>
                <artifactId>undertow-servlet</artifactId>
                <version>${undertow.version}</version>
            </dependency>
            <dependency>
                <groupId>org.antlr</groupId>
                <artifactId>ST4</artifactId>
                <version>${stringtemplate.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.tika</groupId>
                <artifactId>tika-core</artifactId>
                <version>${tika.version}</version>
            </dependency>
            <dependency>
                <groupId>org.asciidoctor</groupId>
                <artifactId>asciidoctorj</artifactId>
                <version>${asciidoctorj.version}</version>
            </dependency>
            <dependency>
                <groupId>org.imgscalr</groupId>
                <artifactId>imgscalr-lib</artifactId>
                <version>${imgscalr.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.asciidoctor</groupId>
                    <artifactId>asciidoctor-maven-plugin</artifactId>
                    <version>${asciidoctor.plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
